[package]
name = "slaent-rs"
version = "0.1.0"
authors = ["Joshua Yanovski <pythonesque@gmail.com>"]

[dependencies]
bitflags = "0.3.2"
error-type = "0.1.2"
# http-muncher = "0.2.0"
iron = "0.1.20"
libc = "0.1.8"
maud_macros = "0.4.3"
# mio = "0.3.7"
postgres_macros = "0.1.3"
r2d2_postgres = "0.9.2"
rand = "0.3.8"
router = "0.0.10"
nix = "0.3.9"

[dev-dependencies]
quickcheck_macros = "0.2.20"
num = "0.1.25"

[dependencies.cuckoo]
git = "https://github.com/pythonesque/libcuckoo.rs"
# path = "/Users/pythonesque/dev/personal/libcukoo.rs"
rev = "adff04585821f4ca92f83a75f0b02d2488d28da1"

[dependencies.fallthrough]
git = "https://github.com/pythonesque/fallthrough"
rev = "3d6fa8e5b2bfa8fd2bd03c3eb6b8abf6aabfce13"
version = "0.0.1"

[dependencies.jetscii]
git = "https://github.com/shepmaster/jetscii"
rev = "f04dc4ec8307c506b0f4165eb869fe746537db1e"
version = "0.2.0"
features = ["unstable"]

[dependencies.mio]
# git = "https://github.com/carllerche/mio"
git = "https://github.com/pythonesque/mio"
# path = "/Users/pythonesque/dev/mozilla/mio"
rev = "reuseport"
version = "0.4.0"

[dependencies.http-muncher]
git = "https://github.com/pythonesque/rust-streaming-http-parser"
# path = "/Users/pythonesque/dev/todesignandconquer/rust-streaming-http-parser"
rev = "api-cleanup"
version = "0.3.0"
